--- a/styles.css
+++ b/styles.css
@@ -182,6 +182,33 @@
 }
 
 @layer layout {
+  .flow > * + * {
+    margin-top: var(--flow-spacer, 1em);
+  }
+
+  .grid-flow {
+    display: grid;
+    gap: var(--grid-flow-gap, 1rem);
+  }
+
+  .equal-columns {
+    display: grid;
+    gap: var(--equals-columns-gap, 1rem);
+    align-items: var(--equals-columns-vertical-alignment, stretch);
+
+    @media (width > 760px) {
+      grid-auto-flow: column;
+      grid-auto-columns: 1fr;
+    }
+
+    &[data-gap="large"] {
+      --equals-columns-gap: 2rem;
+    }
+
+    &[data-alignment="centered"] {
+      --equals-columns-vertical-alignment: center;
+    }
+  }
   .section {
     --padding: 3.75rem;
     padding-block: var(--padding);
@@ -213,8 +240,56 @@
 }
 
 @layer components {
+  .site-header {
+    padding-block: 1rem;
+  }
   .site-header__inner {
     display: flex;
+    gap: 0.5rem 1rem;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .primary-navigation {
+    ul {
+      display: flex;
+      gap: 0.5rem 1rem;
+      flex-wrap: wrap;
+      gap: 1rem;
+    }
+  }
+
+  .hero {
+    text-align: center;
+    font-size: var(--font-size-heading-md);
+    color: var(--text-high-contrast);
+    background-image: url(/assets/hero.webp);
+    background-size: cover;
+    background-position: center;
+  }
+
+  .hero__title {
+    font-size: var(--font-size-heading-lg);
+
+    span {
+      font-size: var(--font-size-heading-xl);
+      color: var(--text-brand);
+      display: block;
+    }
+  }
+
+  .card {
+    padding: 1rem;
+    background-color: var(--background-light);
+    border-radius: var(--border-radius-3);
+
+    img {
+      border-radius: var(--border-radius-2);
+    }
+  }
+  .card__title {
+    font-size: var(--card--title-font-size, var(--font-size-heading-regular));
+    color: var(--card-title-color, var(--text-brand));
   }
 }
 
