--- a/styles.css
+++ b/styles.css
@@ -259,6 +259,28 @@
     }
   }
 
+  .site-footer {
+    text-align: center;
+    background-color: var(--background-dark);
+    padding-block: 2rem;
+    display: grid;
+    gap: 2rem;
+
+    a {
+      color: var(--text-main);
+    }
+    a:hover,
+    a:focus-visible {
+      color: var(--text-brand);
+    }
+  }
+
+  .site-footer__title {
+    font-size: var(--font-size-lg);
+    font-family: var(--ff-heading);
+    font-weight: 700;
+  }
+
   .hero {
     text-align: center;
     font-size: var(--font-size-heading-md);
@@ -279,6 +301,8 @@
   }
 
   .card {
+    display: grid;
+    gap: var(--card-gap, 1rem);
     padding: 1rem;
     background-color: var(--background-light);
     border-radius: var(--border-radius-3);
@@ -290,6 +314,24 @@
   .card__title {
     font-size: var(--card--title-font-size, var(--font-size-heading-regular));
     color: var(--card-title-color, var(--text-brand));
+  }
+
+  .button {
+    display: inline-flex;
+    font-size: var(--font-size-md);
+    text-decoration: none;
+    cursor: pointer;
+    padding: 0.5rem 1rem;
+    background-color: var(--background-accent-main);
+    font-family: var(--ff-heading);
+    font-weight: 700;
+    border-radius: var(--border-radius-2);
+  }
+
+  .button:hover,
+  .button:focus-visible {
+    color: var(--text-high-contrast);
+    background-color: var(--background-accent-light);
   }
 }
 
